# Elections

./: Ass5  CMakeLists.txt  DemocraticLeaderPolitician.cpp  DemocraticLeaderPolitician.h  DemocraticParty.cpp  DemocraticParty.h  DemocraticSocialPolitician.cpp  DemocraticSocialPolitician.h  Error.h  LeaderPolitician.cpp  LeaderPolitician.h  Party.cpp  Party.h  PoliticalSys.cpp  PoliticalSys.h  Politician.cpp  Politician.h  RepublicanLeaderPolitician.cpp  RepublicanLeaderPolitician.h  RepublicanParty.cpp  RepublicanParty.h  RepublicanSocialPolitician.cpp  RepublicanSocialPolitician.h  SocialPolitician.cpp  SocialPolitician.h  main.cpp  makefile
