cmake_minimum_required(VERSION 3.24)
project(Assignment5)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment5 main.cpp Error.h Politician.cpp Politician.h Party.cpp Party.h LeaderPolitician.cpp LeaderPolitician.h SocialPolitician.cpp SocialPolitician.h DemocraticParty.cpp DemocraticParty.h RepublicanParty.cpp RepublicanParty.h RepublicanSocialPolitician.cpp RepublicanSocialPolitician.h DemocraticSocialPolitician.cpp DemocraticSocialPolitician.h DemocraticLeaderPolitician.cpp DemocraticLeaderPolitician.h RepublicanLeaderPolitician.cpp RepublicanLeaderPolitician.h PoliticalSys.cpp PoliticalSys.h)
